--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@angular/core": "~9.1.13",
     "@angular/forms": "~9.1.13",
     "@angular/material": "^9.2.4",
+    "@angular/material-moment-adapter": "^12.2.9",
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
     "json-server": "^0.17.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
